deployment/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nlp-abc-list
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`abc.nlp.weidenfeld.info`)
      kind: Rule
      services:
        - name: nlp-abc-list
          port: http
  tls:
    secretName: nlp-abc-list
